k8s/backend/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ninko-backend
  labels:
    app.kubernetes.io/name: ninko-backend
    app.kubernetes.io/part-of: ninko
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ninko.conbro.local`)
      kind: Rule
      services:
        - name: ninko-backend
          port: 8000
  tls:
    secretName: ninko-conbro-local-tls
